# Physical-AI-Humanoid-Robotics-Essentials

./: .gitignore  =0.6.0  EXAMPLE_USAGE.md  GEMINI_SETUP.md  MULTILINGUAL_IMPLEMENTATION_SUMMARY.md  OPENROUTER_INTEGRATION_SUMMARY.md  PIPELINE_SUMMARY.md  README.md  RUN_OPENROUTER_CHATBOT.md  SETUP_ENVIRONMENT.bat  SETUP_GUIDE.md  TEST_MULTILINGUAL.md  TRANSLATION_PROGRESS.md  TRANSLATION_PROGRESS_SUMMARY.md  ai-robotics-book-complete.txt  delete_collection.py  diagnose_chatbot.py  docusaurus.config.js  package-lock.json  package.json  pyproject.toml  readability_analyzer.py  requirements.txt  run_local_pipeline.py  sidebars.js  test_api_connection.py  test_pipeline_local.py  test_rag_agent_api.py  test_retrieval_pipeline.py  test_urdu_chatbot.py  translate_remaining_docs.py  verify_openrouter_integration.py  verify_pipeline.py
.claude/: settings.local.json
.specify/memory/: constitution.md
_config/: bibliography.bib
docs/: test-chatbot.mdx
docs/bibliography/: references.md
docs/capstone/: capstone-comprehensive.md  intro.md
docs/foundations/: 01-chapter-foundations-of-ai-robotics.md  02-chapter-ai-development-revolution.md  04-chapter-nine-pillars-of-ai-driven-development.md  05-chapter-introducing-ai-driven-development.md  ai-development-revolution.md  ai-turning-point.md  how-to-make-a-billion-dollars-in-the-ai-era.md  intro.md  introducing-ai-driven-development.md  nine-pillars-of-ai-driven-development.md  terminology.md
docs/hardware/: hardware-comprehensive.md
docs/perception/: perception-navigation-comprehensive.md
output/: document_chunks.json
(+173 files in other folders)
